fix: stops page from snapping left when scrollbar is enabled

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,10 +43,13 @@ body {
   border: 0;
 }
 
+body {
+  width: 100vw;
+}
+
 html, body {
   height: 100%;
   scroll-behavior: smooth;
-  overflow-y: scroll;
 }
 
 select {
